<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>kazanmw.projects.perso</groupId>
	<artifactId>cloneFinder</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<encoding>UTF-8</encoding>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				<!-- <release>12</release> -->
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-dependency-plugin</artifactId>
			    <executions>
			        <execution>
			            <id>copy-dependencies</id>
			            <phase>package</phase>
			            <goals>
			                <goal>copy-dependencies</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${project.build.directory}/lib</outputDirectory>
			                <overWriteReleases>false</overWriteReleases>
			                <overWriteSnapshots>false</overWriteSnapshots>
			                <overWriteIfNewer>true</overWriteIfNewer>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-jar-plugin</artifactId>
			    <version>3.1.2</version>
			    <configuration>
			        <archive>
			            <manifest>
			            	<addClasspath>true</addClasspath>
			            	<classpathPrefix>lib/</classpathPrefix>
			                <mainClass>maestro.Ordonnanceur</mainClass>
			                <packageName>${project.groupId}</packageName>
			            </manifest>
			            <manifestEntries>
			                <Created-By>Unknown-guy</Created-By>
			            </manifestEntries>
			        </archive>
			    </configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>${project.build.sourceDirectory}\..\resources</directory>
			</resource>
		</resources>
	</build>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore-nio -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore-nio</artifactId>
			<version>4.4.12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.30</version>
		</dependency>
		
	</dependencies>
</project>